[tool.poetry]
name = "moex"
version = "0.1.0"
description = ""
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
requests = "^2.31.0"
pandas = ">=1.5.0, <=1.6.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^22.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
aiohttp-theme = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
